- modified header.html partial to remove the head tags so that extra elements can be added to the head on a per-page basis. - added a new dragonfly_api view, along with a dragonfly_api plugin - updated some documentation (still not finished) - added a link to the core reference api with some jQuery magic + showing off the 'include' function

--- a/README
+++ b/README
@@ -4,6 +4,10 @@ Congratulations on choosing Dragonfly!
 
 	newlisp -d 8080 -w . -http
 
-Open Your browser and type localhost:8080 - have FUN!
+Open Your browser and visit http://localhost:8080/ - have FUN!
 
-For installation information see INSTALL.
+For installation information see INSTALL or after running
+the above command visit:
+
+	http://localhost:8080/?dragonfly_welcome
+
