- new command-event redirection for built-in newLISP server! no longer need to prepend ? when running built-in server - new command-event handler also handles GET parameters appeneded to the request the way apache QSA redirection does! - updated multiplication value for newlisp symbol size from 32 to proper 28 value - removed all use of ? prepending to URLs

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Version 0.51
+
+  * added redirection script when running the built-in newLISP server
+  * changed recommendations to run ./newlispServer
+
 Version 0.50
 
   * massive rewrite. too many changes to list, if you want to see them look through the mercurial change log:
