--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Congratulations on choosing Dragonfly!
 If you're on Windows open that file and run the command that's
 inside of it manually instead, i.e.:
 
-	newlisp "dragonfly-framework/newlisp-redirection.lsp" -c -http -d 8080 -w .
+	newlisp dragonfly-framework/newlisp-redirection.lsp -http -d 8080 -w .
 
 Open Your browser and visit http://localhost:8080/ - have FUN!
 
