- updated jquery and added some jquery effects stuff<br/> - added multi-param stuff for $GET/$POST<br/> - added a page to the guide on said multi-param stuff<br/> - removed the blog.html file<br/> - added newlispServerWIn.bat<br/> - updated README and TROUBLESHOOTING on how to use said bat file

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,10 @@ Version 0.51
 
   * added redirection script when running the built-in newLISP server
   * changed recommendations to run ./newlispServer
+  * added newlispServerWin.bat file provided by m35
+  * support for PHP-like multi-params by appending [] to the var name
+  * added documentation for $GET/$POST/$FILES and multiparams to guide
+  * updated the RSS feed on the example-site for 0.50
 
 Version 0.50
 
