--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Version 0.6
+
+  * added DF.DB and ObjNL
+  * updated documentation
+
 Version 0.51
 
   * added redirection script when running the built-in newLISP server
