--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,8 @@ Version 0.6
   * improved windows compatibility by creating /tmp if necessary
   * improved the 'load-once' function (load replacement)
   * added new add-to-load-path and wrap-func functions to utils.lsp
+  * added CGI-like route to the inactive plugins. Move to the active
+    active plugins folder if you want to use it.
 
 Version 0.51
 
