--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,7 @@ Version 0.6
   * added utf8-urlencode/decode functions to Request, they handle foreign characters perfectly.
   * much improved the smtp module that comes with newLISP and added it to the inactive plugins.
   * added 'SET_DFLY_SELF' function and the corresponding DFLY_SELF and DFLY_SELF_DIR global symbols.
+  * added 'DFLY_PAGE' to point to the currently loaded, host-unqualified web URL
 
 Version 0.51
 
