--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@ Version 0.6
   * much improved the smtp module that comes with newLISP and added it to the inactive plugins.
   * added 'SET_DFLY_SELF' function and the corresponding DFLY_SELF and DFLY_SELF_DIR global symbols.
   * added 'DFLY_PAGE' to point to the currently loaded, host-unqualified web URL
+  * added some preliminary stuff to path.lsp in plugins-inactive
 
 Version 0.51
 
