--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Version 0.6.1
+
+  * now $BINARY can handle large data (compensated for a newLISP bug in 'read-buffer').
+  * added documentation for MAX_POST_LENGTH in request.lsp
+  * fix to Jeff's JSON.lsp plugin (switched to " instead of ' for strings)
+
 Version 0.6
 
   * added DF.DB and ObjNL
