--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ Version 0.7
   * added documentation for MAX_POST_LENGTH in request.lsp
   * fix to Jeff's JSON.lsp plugin (switched to " instead of ' for strings)
   * DF:activate-plugin can now be used to load all lisp files in a directory
+  * added a dragonfly_utils.lsp file to the DF.DB folder, includes handy fn-query-with-db function.
 
 Version 0.6
 
