--- a/CHANGES
+++ b/CHANGES
@@ -5,7 +5,7 @@ Version 0.61
   * added documentation for MAX_POST_LENGTH in request.lsp
   * fix to Jeff's JSON.lsp plugin (switched to " instead of ' for strings)
   * DF:activate-plugin can now be used to load all lisp files in a directory
-  * added a dragonfly_utils.lsp file to the DF.DB folder, includes fn-query-with-db and assoc-row-with-db
+  * added db/dragonfly_utils, includes fn-query-with-db, assoc-row-with-db and assoc-rows-with-db
   * fixed handling of floats in Sqlite3 on some architectures (more improvements needed though, see TODO)
 
 Version 0.6
