--- a/CHANGES
+++ b/CHANGES
@@ -1,12 +1,12 @@
 Version 0.7
 
   * all code uses new ++,--,extend,write,read functions (still compatible with older newlisps)
-  * added DB.OBJ - a very simple ORM for DF.DB
   * now $BINARY can handle large data (compensated for a newLISP bug in 'read-buffer').
   * added documentation for MAX_POST_LENGTH in request.lsp
   * fix to Jeff's JSON.lsp plugin (switched to " instead of ' for strings)
   * DF:activate-plugin can now be used to load all lisp files in a directory
-  * db/dragonfly_utils includes for-query-with-db, fn-query-with-db, assoc-row-with-db, assoc-rows-with-db and query-cell-with-db
+  * db/database_utils includes for-query-with-db, fn-query-with-db, assoc-row-with-db, assoc-rows-with-db and query-cell-with-db
+  * db/database_orm - DB.OBJ - a very simple ORM for DF.DB
   * fixed handling of floats in Sqlite3 on some architectures (more improvements needed though, see TODO)
   * added 'extract' and '<-' functions to core utils
 
