--- a/CHANGES
+++ b/CHANGES
@@ -7,8 +7,8 @@ Version 0.7
   * DF:activate-plugin can now be used to load all lisp files in a directory
   * db/database_utils includes for-query-with-db, assoc-row-with-db, query-cell-with-db and others
   * db/database_orm - DB.OBJ - a very simple ORM for DF.DB
+  * db/database_sqlite3 updated to version 1.2 (see its docs for what's new)
   * fixed Jeff's JSON.lsp plugin (switched to " instead of ' for strings)
-  * fixed handling of floats in Sqlite3 on some architectures (more improvements needed though, see TODO)
   * fixed bug in definition of define-smacro
 
 Version 0.6
