--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Version 0.75
+
+  * add all files in plugins-active/ to `.gitignore` except route_cgi.lsp
+  * add `example-site/dragonfly-framework/config-override.lsp` to `.gitignore`
+
 Version 0.74
 
   * Alpine linux support for sqlite
