--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version 0.75
+
+  * add all files in plugins-active/ to .gitignore except route_cgi.lsp
+
 Version 0.74
 
   * Alpine linux support for sqlite
